// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Animated Container Normal 1`] = `
<div
  data-testid="storybook-content"
>
  <div>
    Hello world
  </div>
</div>
`;

exports[`Storyshots Background Dark 1`] = `
.c0 {
  z-index: -1;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #2F343C;
}

<div
  data-testid="storybook-content"
>
  <canvas
    class="c0"
    height="768"
    style="width: 1024px; height: 768px;"
    width="1024"
  />
</div>
`;

exports[`Storyshots Background Light 1`] = `
.c0 {
  z-index: -1;
  position: fixed;
  top: 0;
  left: 0;
  background-color: #F6F7F9;
}

<div
  data-testid="storybook-content"
>
  <canvas
    class="c0"
    height="768"
    style="width: 1024px; height: 768px;"
    width="1024"
  />
</div>
`;

exports[`Storyshots Download Beta Version Available 1`] = `
.c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c3 {
  display: block;
  font-size: 1rem;
}

.c2 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c2.c2 {
  background-color: #2F343C;
  color: #D3D8DE;
  background-image: none;
  border: 1px solid #D3D8DE;
}

.c1 + .c1 {
  margin-left: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1rem auto;
}

<div
  data-testid="storybook-content"
>
  <div
    class="c0"
  >
    <a
      class="bp4-button bp4-intent-primary c1 c2"
      data-testid="download-stable-version"
      href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
      role="button"
      tabindex="0"
    >
      <span
        class="bp4-button-text"
      >
        <span>
          Download v10.2.4
        </span>
        <span
          class="c3"
        >
          Windows (x64)
        </span>
        <span
          class="c3"
        >
          Stable, for most users
        </span>
      </span>
    </a>
    <a
      class="bp4-button c1 c2"
      href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-setup-11.0.0-beta.0.exe"
      role="button"
      tabindex="0"
    >
      <span
        class="bp4-button-text"
      >
        <div>
          Download v11.0.0-beta.0
        </div>
        <span
          class="c3"
        >
          Windows (x64)
        </span>
        <span
          class="c3"
        >
          Beta, for new features
        </span>
      </span>
    </a>
  </div>
  <div
    class="c4"
  >
    <button
      class="bp4-button bp4-minimal"
      data-testid="open-dialog"
      href="/downloads"
      type="button"
    >
      <span
        class="bp4-button-text"
      >
        Choose another platform
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Download Stable Version Only 1`] = `
.c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c3 {
  display: block;
  font-size: 1rem;
}

.c2 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c2.c2 {
  background-color: #2F343C;
  color: #D3D8DE;
  background-image: none;
  border: 1px solid #D3D8DE;
}

.c1 + .c1 {
  margin-left: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1rem auto;
}

<div
  data-testid="storybook-content"
>
  <div
    class="c0"
  >
    <a
      class="bp4-button bp4-intent-primary c1 c2"
      data-testid="download-stable-version"
      href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
      role="button"
      tabindex="0"
    >
      <span
        class="bp4-button-text"
      >
        <span>
          Download v10.2.4
        </span>
        <span
          class="c3"
        >
          Windows (x64)
        </span>
        <span
          class="c3"
        >
          Stable, for most users
        </span>
      </span>
    </a>
  </div>
  <div
    class="c4"
  >
    <button
      class="bp4-button bp4-minimal"
      data-testid="open-dialog"
      href="/downloads"
      type="button"
    >
      <span
        class="bp4-button-text"
      >
        Choose another platform
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Error Boundary Throws 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2em;
}

.c1 {
  margin-bottom: 1em;
}

<div
  data-testid="storybook-content"
>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Ah, the webpage has become 🐢. We will fix it.
    </div>
    <div>
      <button
        type="button"
      >
        Reload
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header Normal 1`] = `
.c5 {
  height: 60px;
  line-height: 60px;
}

.c6 {
  margin-right: 1ex;
}

.c0 {
  height: 60px;
  background-color: #2F343C;
}

.c1 {
  margin: 0 auto;
  max-width: 960px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  height: 40px;
}

.c2 {
  opacity: 1;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

<div
  data-testid="storybook-content"
>
  <div
    class="c0"
    id="header"
  >
    <nav
      class="c1"
    >
      <div
        class="bp4-button-group bp4-minimal"
      >
        <button
          aria-label="Return to home"
          class="bp4-button c2"
          href="/"
          type="button"
        >
          <span
            class="bp4-button-text"
          >
            <img
              class="c3"
              src="/img.jpg"
            />
          </span>
        </button>
        <button
          class="bp4-button"
          href="/explore"
          type="button"
        >
          <span
            class="bp4-button-text"
          >
            Explore
          </span>
        </button>
        <button
          class="bp4-button"
          href="/downloads"
          type="button"
        >
          <span
            class="bp4-button-text"
          >
            Downloads
          </span>
        </button>
      </div>
      <div
        class="c4"
      />
      <div
        class="bp4-button-group bp4-minimal c5"
      >
        <button
          class="bp4-button"
          type="button"
        >
          <span
            class="bp4-button-text"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-swatchbook c6"
              data-icon="swatchbook"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 32C0 14.33 14.33 0 32 0H160C177.7 0 192 14.33 192 32V416C192 469 149 512 96 512C42.98 512 0 469 0 416V32zM128 64H64V128H128V64zM64 256H128V192H64V256zM96 440C109.3 440 120 429.3 120 416C120 402.7 109.3 392 96 392C82.75 392 72 402.7 72 416C72 429.3 82.75 440 96 440zM224 416V154L299.4 78.63C311.9 66.13 332.2 66.13 344.7 78.63L435.2 169.1C447.7 181.6 447.7 201.9 435.2 214.4L223.6 425.9C223.9 422.7 224 419.3 224 416V416zM374.8 320H480C497.7 320 512 334.3 512 352V480C512 497.7 497.7 512 480 512H182.8L374.8 320z"
                fill="currentColor"
              />
            </svg>
            Theme 
            Chibaheit
          </span>
        </button>
        <span
          class="bp4-popover-wrapper"
        >
          <span
            aria-haspopup="true"
            class="bp4-popover-target"
          >
            <button
              class="bp4-button"
              data-testid="language-dropdown"
              type="button"
            >
              <span
                class="bp4-button-text"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-language c6"
                  data-icon="language"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 640 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M448 164C459 164 468 172.1 468 184V188H528C539 188 548 196.1 548 208C548 219 539 228 528 228H526L524.4 232.5C515.5 256.1 501.9 279.1 484.7 297.9C485.6 298.4 486.5 298.1 487.4 299.5L506.3 310.8C515.8 316.5 518.8 328.8 513.1 338.3C507.5 347.8 495.2 350.8 485.7 345.1L466.8 333.8C462.4 331.1 457.1 328.3 453.7 325.3C443.2 332.8 431.8 339.3 419.8 344.7L416.1 346.3C406 350.8 394.2 346.2 389.7 336.1C385.2 326 389.8 314.2 399.9 309.7L403.5 308.1C409.9 305.2 416.1 301.1 422 298.3L409.9 286.1C402 278.3 402 265.7 409.9 257.9C417.7 250 430.3 250 438.1 257.9L452.7 272.4L453.3 272.1C465.7 259.9 475.8 244.7 483.1 227.1H376C364.1 227.1 356 219 356 207.1C356 196.1 364.1 187.1 376 187.1H428V183.1C428 172.1 436.1 163.1 448 163.1L448 164zM160 233.2L179 276H140.1L160 233.2zM0 128C0 92.65 28.65 64 64 64H576C611.3 64 640 92.65 640 128V384C640 419.3 611.3 448 576 448H64C28.65 448 0 419.3 0 384V128zM320 384H576V128H320V384zM178.3 175.9C175.1 168.7 167.9 164 160 164C152.1 164 144.9 168.7 141.7 175.9L77.72 319.9C73.24 329.1 77.78 341.8 87.88 346.3C97.97 350.8 109.8 346.2 114.3 336.1L123.2 315.1H196.8L205.7 336.1C210.2 346.2 222 350.8 232.1 346.3C242.2 341.8 246.8 329.1 242.3 319.9L178.3 175.9z"
                    fill="currentColor"
                  />
                </svg>
                English
              </span>
            </button>
          </span>
        </span>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Target List Beta Version Available 1`] = `
.c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c3 {
  display: block;
  font-size: 1rem;
}

.c2 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c2.c2 {
  background-color: #2F343C;
  color: #D3D8DE;
  background-image: none;
  border: 1px solid #D3D8DE;
}

.c1 + .c1 {
  margin-left: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 button,
.c4 a {
  margin: 1ex 1ex;
}

<div
  data-testid="storybook-content"
>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <div
      class="c0"
    >
      <a
        class="bp4-button bp4-intent-primary c1 c2"
        data-testid="download-stable-version"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          <span>
            Download v10.2.4
          </span>
          <span
            class="c3"
          >
            Windows (x64)
          </span>
          <span
            class="c3"
          >
            Stable, for most users
          </span>
        </span>
      </a>
      <a
        class="bp4-button c1 c2"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-setup-11.0.0-beta.0.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          <div>
            Download v11.0.0-beta.0
          </div>
          <span
            class="c3"
          >
            Windows (x64)
          </span>
          <span
            class="c3"
          >
            Beta, for new features
          </span>
        </span>
      </a>
    </div>
  </div>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <h2>
      Stable
       
      v10.2.4
    </h2>
    <div
      class="c4"
    >
      <a
        class="bp4-button bp4-intent-success"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Linux (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-arm64.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Linux (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi_10.2.4_amd64.deb"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Debian / Ubuntu (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi_10.2.4_arm64.deb"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Debian / Ubuntu (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4.x86_64.rpm"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Fedora / CentOS (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4.dmg"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          macOS (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-arm64.dmg"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          macOS (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x64) Portable
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x86)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-ia32-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x86) Portable
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-arm64-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (ARM)
        </span>
      </a>
    </div>
  </div>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <h2>
      Beta
       
      v11.0.0-beta.0
    </h2>
    <div
      class="c4"
    >
      <a
        class="bp4-button bp4-intent-success"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-setup-11.0.0-beta.0.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Linux (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0-arm64.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Linux (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi_11.0.0-beta.0_amd64.deb"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Debian / Ubuntu (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi_11.0.0-beta.0_arm64.deb"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Debian / Ubuntu (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0.x86_64.rpm"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Fedora / CentOS (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0.dmg"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          macOS (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0-arm64.dmg"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          macOS (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x64) Portable
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-setup-11.0.0-beta.0.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x86)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0-ia32-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x86) Portable
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v11.0.0-beta.0/poi-11.0.0-beta.0-arm64-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (ARM)
        </span>
      </a>
    </div>
  </div>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <h2>
      Others
    </h2>
    <div
      class="c4"
    >
      <a
        class="bp4-button"
        data-testid="old-versions"
        href="https://registry.npmmirror.com/binary.html?path=poi/"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Old versions
          <br />
          Hosted at TAONPM
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://ci.appveyor.com/project/KochiyaOcean/poi"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Windows nightlies
          <br />
          Hosted at AppVeyor
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://nightly.poi.moe/"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Linux and macOS nightlies
          <br />
          Hosted at poi.moe
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://github.com/poooi/poi"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Source code
          <br />
          Hosted at GitHub
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Target List Stable Version Only 1`] = `
.c0 {
  text-align: center;
  min-height: 150px;
}

.c0 .ms-Spinner-label {
  font-size: 20px;
}

.c3 {
  display: block;
  font-size: 1rem;
}

.c2 {
  padding: 1rem 2em;
  font-size: 1.5rem;
}

.c2.c2 {
  background-color: #2F343C;
  color: #D3D8DE;
  background-image: none;
  border: 1px solid #D3D8DE;
}

.c1 + .c1 {
  margin-left: 2rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 button,
.c4 a {
  margin: 1ex 1ex;
}

<div
  data-testid="storybook-content"
>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <div
      class="c0"
    >
      <a
        class="bp4-button bp4-intent-primary c1 c2"
        data-testid="download-stable-version"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          <span>
            Download v10.2.4
          </span>
          <span
            class="c3"
          >
            Windows (x64)
          </span>
          <span
            class="c3"
          >
            Stable, for most users
          </span>
        </span>
      </a>
    </div>
  </div>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <h2>
      Stable
       
      v10.2.4
    </h2>
    <div
      class="c4"
    >
      <a
        class="bp4-button bp4-intent-success"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Linux (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-arm64.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Linux (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi_10.2.4_amd64.deb"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Debian / Ubuntu (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi_10.2.4_arm64.deb"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Debian / Ubuntu (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4.x86_64.rpm"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Fedora / CentOS (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4.dmg"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          macOS (x64)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-arm64.dmg"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          macOS (ARM)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x64) Portable
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-setup-10.2.4.exe"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x86)
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-ia32-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (x86) Portable
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://npmmirror.com/mirrors/poi/v10.2.4/poi-10.2.4-arm64-win.7z"
        role="button"
        tabindex="0"
      >
        <span
          class="bp4-button-text"
        >
          Windows (ARM)
        </span>
      </a>
    </div>
  </div>
  <div
    class="bp4-card bp4-elevation-0"
  >
    <h2>
      Others
    </h2>
    <div
      class="c4"
    >
      <a
        class="bp4-button"
        data-testid="old-versions"
        href="https://registry.npmmirror.com/binary.html?path=poi/"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Old versions
          <br />
          Hosted at TAONPM
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://ci.appveyor.com/project/KochiyaOcean/poi"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Windows nightlies
          <br />
          Hosted at AppVeyor
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://nightly.poi.moe/"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Linux and macOS nightlies
          <br />
          Hosted at poi.moe
        </span>
      </a>
      <a
        class="bp4-button"
        href="https://github.com/poooi/poi"
        rel="noopener noreferrer"
        role="button"
        tabindex="0"
        target="_blank"
      >
        <span
          class="bp4-button-text"
        >
          Source code
          <br />
          Hosted at GitHub
        </span>
      </a>
    </div>
  </div>
</div>
`;
